[package]
name = "artie-engine-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = "0.11.0"
prost = "0.12.6"
tokio = { version = "1.0", features = ["full"] }
artie_common = "0.3.1"

[build-dependencies]
tonic-build = "0.11.0"