[package]
name = "artie-engine-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = "0.11.0"
tonic-reflection = "0.11.0"
prost = "0.12.6"
tokio = { version = "1.0", features = ["full", "signal"] }
artie_common = { version = "0.3.2", default-features = false }

[build-dependencies]
tonic-build = "0.11.0"